# AIChatbot

./: .env  .env.example  .gitignore  README.md  factura_template.html  pyproject.toml  requirements-test.txt  requirements.txt  run.py  threads_db  threads_db.db
app/: __init__.py  database.py  views.py
app/arca/: __init__.py  arca_auth.py  authentication.py  electronic_invoice.py  journal.py
app/config/: arca_config.py  database.py  palabras_clave.json
app/controller/: cliente_controller.py  controller.py  factura_controller.py  monotributista_controller.py  thread_controller.py
app/db/: models.py  userModel.py
app/decorators/: security.py
app/models/: cliente.py  factura.py  models.py  monotributista.py  usuario.py
app/services/: arca_auth_service.py  arca_service.py  cliente_service.py  factura_service.py  monotributista_service.py  openai_service.py
app/test/: stringToJsonTest.py
app/tests/: test_arca_service.py
app/utils/: string_utils.py  whatsapp_utils.py
app/views/: usuario_view.py  views.py
docs/: example.env  requirements.txt
docs/certificates/: certificadoDN.crt  certificate.csr  private_key.key
start/: whatsapp_quickstart.py
templates/: factura_template.html
test/: test_arca_service.py  test_cliente_service.py  test_factura_controller.py  test_factura_service.py  test_monotributista_service.py  test_openai_service.py  test_openia_service.py  test_string_to_json.py  threads_db.db
threads_db/: threads.db
