[project]
name = "ai-chatbot"
version = "1.0.0"
description = "WhatsApp AI Chatbot with OpenAI Assistants, MongoDB, and AFIP/ARCA invoice integration"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["app"]
omit = ["test/*", "app/arca/wsaa.py"]

[tool.coverage.report]
show_missing = true
fail_under = 50
